# wizard-domaininfo

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  codeql-analysis.yml
config/: coverage.ini  mypy.ini
docs/reference/: cli.md  domaininfo.md  net.md  parse.md  pwhois.md  utils.md
scripts/: setup.sh
src/wizard_domaininfo/: __init__.py  __main__.py  cli.py  domaininfo.py  net.py  parse.py  pwhois  pwhois.py  utils.py
tests/: __init__.py  test_cli.py  test_parse.py  test_utils.py  test_wizard_domaininfo.py
