[tool.poetry]
name = "wizard_domaininfo"
version = "0.1.0"
description = ""
authors = ["Michael Ramsey <mike@hackerdise.me>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^54.1.0"
wheel = "^0.36.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
